--- a/main_page.css
+++ b/main_page.css
@@ -1,4 +1,6 @@
-
+input{
+    outline: none;
+}
 body{
     display: flex;
     flex-direction: column;
@@ -20,12 +22,52 @@ body{
 .main_logo{
     width: 100px;
 }
-.search{
+.searchbar_complex{
+    position: relative;
+}
+.disappearing{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.search_bar{
     background-color: #EFEFEF;
     border-radius: 3px;
     border-style: none;
-    padding: 5px;
+    padding: 7px 5px 7px 28px;
+    
 }
+.search_history{
+    width: 360px;
+    height: 400px;
+    border: #dbdbdb solid 1px;
+    background-color: white;
+    position: absolute;
+    top: 50px;
+    left: -95px;
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.history{
+    width: 100%;
+    height: 40px;
+    font-weight: bold;
+}
+
+.search_bar:focus{
+    padding: 7px 26px 7px 7px; 
+}
+
+.search_bar:focus ~ .disappearing{
+    display: none;
+}
+
+.search_bar:focus ~.search_history{
+    display: flex;
+}
+
 i{
     color: #262626;
     margin: 7px;
@@ -40,7 +82,7 @@ i{
 }
 .story_container{
     display: flex;
-    max height: 120px;
+    max-height: 120px;
     width: 60%;
     background-color: white;
     border: #dbdbdb solid 1px;
@@ -116,7 +158,7 @@ a{
 }
 .comment_bar{
     width: 100%;
-    min height: 100px;
+    min-height: 100px;
     background-color: white;
     border: #dbdbdb solid 1px;
     display: flex;
@@ -134,4 +176,5 @@ a{
     border-style: none;
     background-color: white;
     color: #0095F6;
+
 }
